# wio-terminal-slint

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs  slint_integration.rs
ui/: main_window.slint  wio_splash.slint
