[package]
name = "wio-terminal-slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.7"
panic-halt = "0.2.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.5"

slint = { version = "1.3.2", default-features = false, features = ["compat-1-0", "unsafe-single-threaded", "libm"], optional = true }
embedded-graphics-core = { version = "0.3.3", optional = true }
embedded-alloc = { version = "0.5.1", optional = true }

[build-dependencies]
slint-build = { version = "1.0.0", optional = true }

[features]
default = ["gui", "led"]
gui = ["slint", "embedded-graphics-core", "embedded-alloc", "slint-build"]
led = []

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
